# Nutrition-Server-Client

./: .gitignore  CMakeLists.txt  README.md  calories.csv
Documentation/: Systems_Programming_Assingnment_2_Documentation.tex
include/: food_data.h  networking.h
include/client/: client.h
include/server/: file_parser.h  int_queue.h  server.h  thread_pool.h
src/: CMakeLists.txt  food_data.c  networking.c
src/client/: CMakeLists.txt  client.c  main.c
src/server/: CMakeLists.txt  file_parser.c  int_queue.c  main.c  server.c  thread_pool.c
