add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/client)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/server)

set(
  COMMON_SOURCES
    ${COMMON_SOURCES}
    ${CMAKE_CURRENT_SOURCE_DIR}/food_data.c
    ${CMAKE_CURRENT_SOURCE_DIR}/networking.c

  PARENT_SCOPE
)

set(
  SERVER_SOURCES
    ${SERVER_SOURCES}

  PARENT_SCOPE
)

set(
  CLIENT_SOURCES
    ${CLIENT_SOURCES}

  PARENT_SCOPE
)
